editing coming soon

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
         <title>Renewable Energy Systems</title>
         <meta name="description" content="renewable energy systems UPS Power">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="soon.css">
     </head>
     <body>
         <header>
-            <h1>RENEWABLE ENERGY SYSTEMS</h1>
+            <h1><span>RENEWABLE</span> <span>ENERGY</span> <span>SYSTEMS</span> </h1>
         </header>
 
         
@@ -21,6 +21,6 @@
 
         <section id="counter" class="counter">
         </section>
-        <script src="main.js" async defer></script>
+        <script src="soon.js" async defer></script>
     </body>
 </html>
