--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Renewable Energy Systems</title>
         <meta name="description" content="renewable energy systems UPS Power">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="soon.css">
+        <link rel="stylesheet" href="soon/soon.css">
     </head>
     <body>
         <header>
@@ -21,6 +21,6 @@
 
         <section id="counter" class="counter">
         </section>
-        <script src="soon.js" async defer></script>
+        <script src="soon/soon.js" async defer></script>
     </body>
 </html>
