content and style improved

--- a/res-front/src/index.html
+++ b/res-front/src/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="Renewable Energy Systems and power solutions">
+  <meta name="keywords" content="UPS, uninterruptible power supply, power, smart homes, IT, power solutions, electric appliance, res,res-eg, ups egypt, egypt">
   <title>Renewable Energy Systems</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
